--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,10 @@
 p {
-    color: red;
-    background-color: darkblue;
+    color: rgb(245, 233, 233);
+
 }
 
 body {
-    background-color: black;
+    background-color: rgb(29, 28, 28);
 }
 
 h1 {
